add get files by entity
